[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = ["solfonte <msfontenla@fi.uba.ar>"]
readme = "README.md"
packages = [{include = "notifications_service"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
