[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = ["solfonte <msfontenla@fi.uba.ar>"]
readme = "README.md"
packages = [{include = "notifications_service"}]

[tool.poetry.dependencies]
python = "^3.8"
firebase-admin = "^6.0.1"
uvicorn = "^0.19.0"
fastapi = "^0.85.2"
flake8 = "^5.0.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
