[tool.poetry]
name = "notifications-service"
version = "0.1.0"
description = ""
authors = ["solfonte <msfontenla@fi.uba.ar>"]
readme = "README.md"
packages = [{include = "notifications_service"}]

[tool.poetry.dependencies]
python = "^3.8"
uvicorn = "^0.19.0"
fastapi = "^0.85.2"
flake8 = "^5.0.4"
python-dotenv = "^0.21.0"
SQLAlchemy = "^1.4.43"
psycopg2-binary = "^2.9.5"
exponent-server-sdk = "^2.0.0"
pytest = "^7.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
